# outgassing-mcp-server

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  TESTS.md  main.py  pyproject.toml
.github/: copilot-instructions.md
