[project]
name = "outgassing-mcp-server"
version = "0.1.0"
description = "MCP server for querying outgassing properties of materials through approved aerospace sources."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=2.13.0.2",
    "pandas>=2.3.3",
    "python-levenshtein>=0.27.3",
]
